--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+SunsUpSolar.sublime-project
+SunsUpSolar.sublime-workspace
+bootstrap-3.0.0.zip
+ERD.mwb
+SunsUpsolar ERD.mwb.bak
+
